--- a/css/styles2.css
+++ b/css/styles2.css
@@ -1,7 +1,8 @@
 body {
-	background-color: #ccffff;
+	background-color: #ccffcc;
 }
-#prvni-trida {
-	font-style: italic;
-	color: gold;
+
+	
+h1 {
+	text-align: center
 }
