--- a/css/styles2.css
+++ b/css/styles2.css
@@ -1,8 +1,12 @@
 body {
-	background-color: #ccffcc;
+	background-color: #fff2e6;
 }
 
 	
 h1 {
-	text-align: center
+	text-align: center;
+	font-size: 100px;
 }
+
+
+
