--- a/css/styles2.css
+++ b/css/styles2.css
@@ -1,12 +1,24 @@
 body {
-background-color:#dfbe9f;
+background-color:#e6e6e6;
 }
 
 	
 h1 {
 	text-align: center;
-	font-size: 100px;
+	font-size: 80px;
+	color: blue;
 }
 
 
-
+h2 {
+	font-size: 35px;
+	color: blue;
+}
+p {
+	font-size: 20px;
+	color: blue
+}
+p1  {
+	font-size: 20px;
+	color: blue;
+}
