--- a/css/styles2.css
+++ b/css/styles2.css
@@ -1,5 +1,5 @@
 body {
-background-color:#e6e6e6;
+background-color:#bfbfbf;
 }
 
 	
@@ -18,7 +18,17 @@ p {
 	font-size: 20px;
 	color: blue
 }
-p1  {
+h3  {
 	font-size: 20px;
 	color: blue;
+}
+.row img{
+	height: auto;
+	width: auto;
+	max-height:300px;
+	max-width: 300px;
+}	 
+h5 {
+	font-size: 23px;
+	color: #00004d;
 }
