--- a/css/styles2.css
+++ b/css/styles2.css
@@ -25,10 +25,14 @@ h3  {
 .row img{
 	height: auto;
 	width: auto;
-	max-height:200px;
-	max-width: 200px;
+	max-height:300px;
+	max-width: 300px;
 }	 
 h5 {
-	font-size: 23px;
-	color: #404040;
+	font-size: 20px;
+	color: #000099;
+}
+h4  {
+	font-size: 25px;
+	color: blue;
 }
